make the stylesheet work

--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ description: 'A collection of vegan recipes found & created. Trying to see how t
 Original idea from [@MattKosoy](https://github.com/MattKosoy).
 Maybe Eventually hooking up a [Jekyll](http://jekyllrb.com)
 backend to this so we can have a live site and git repo in the background.'
-baseurl: "" # the subpath of your site, e.g. /blog/
-# url: "http://yourdomain.com" # the base hostname & protocol for your site
+baseurl: "/vegan-recipes/" # the subpath of your site, e.g. /blog/
+url: "http://jeffreylarrimore.com" # the base hostname & protocol for your site
 twitter_username: okayjeffrey
 github_username:  okayjeffrey
 
