Updating site title

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Okay it's Vegan
+title: Found & Made Recipes
 email: me@jeffreylarrimore.com
 description: 'A collection of vegan recipes found & created. Trying to see how the Markdown and recipes will work in Github.
 Original idea from [@MattKosoy](https://github.com/MattKosoy).
